<resources>
    <string name="app_name">Baker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan">没有更多的内容╮(╯_╰)╭</string>
    <string name="long_string">烘客圈：建立社区化服务，为用户提供一个专门的、具有针对性的烘焙爱好交流社交圈，发布自身与烘焙相关的心情日志等，与好友一起分享烘焙的快乐，并且可把这些心情日记分享</string>
    <string name="about_menu_action_share">分享</string>
    <string name="about_share_text">贝壳 - 享受烘焙的乐趣</string>
    <string name="title_activity_simple_recipe">SimpleRecipeActivity</string>
    <string name="yuanweikaozhishi">
        "原味烤芝士：\n\n"
        "奶油奶酪150g	，低筋粉15g，玉米淀粉10g，精制砂糖30克，纯牛奶60g，白砂糖50g，黄油30g，鸡蛋3只.\n\n"

        "做法:\n"
        "1.	在容器中放入饼干用擀面杖碾碎。\n"
        "2.	奶油奶酪隔水融化（水温不宜高）加入牛奶充分搅拌至无颗粒光滑细腻 依次加入三个蛋黄搅拌，再加入事先融化好的黄油。 筛入混合的低筋粉和玉米淀粉！放置等待。\n"
        "3.	蛋清打发，慢慢加入白砂糖。\n"
        "4. 打到像奶油一样细腻膨胀 这个程度差不多。不宜太过也不能太稀。\n"
        "5.	刮几勺蛋白到奶酪糊中 翻炒搅拌 ，不可按时针搅拌！不能消泡的哟！\n"
        "6.	好啦。倒入面糊 震几下下就好啦！烤箱要提前预热160摄氏度-165摄氏度。烤盘内加入一半水也提前放入一起预热哦！\n"
        "7.	烤制40-50分钟！ 烤到30多分时候可以观察一下蛋糕表面有没有上色过深，可以盖一张锡纸在上面哦！\n"
        "8.	烤好啦！拿出来晾凉。 可以用手轻轻扒拉一下蛋糕四周 会有点分离哦。等会会很容易脱模！\n"
    </string>
    <string name="longstring">
        "黑加仑冻芝士：\n\n"
        "材料（六寸）：\n"
        "麦维他纤维饼干100克，无盐黄油45克，奶油奶酪200克，精制砂糖30克，吉利丁片两片，淡奶油160克，牛奶100毫升，六寸圆模型一个，黑加仑酱适量（按照个人口味添加）.\n\n"

        "做法:\n"
        "1.	在容器中放入饼干用擀面杖碾碎。\n"
        "2.	隔水加热把黄油融化，加进碾碎的饼干中，并搅拌均匀。\n"
        "3.	填把饼干黄油混合物满模型底部，压实，放入冰箱冷冻。\n"
        "4.	把吉利丁放在冰水泡着，备用。\n"
        "5.	隔水加热使奶酪变软并用搅拌机搅拌，直到奶酪变得顺滑。\n"
        "6.	把淡奶油加入奶酪中搅拌，直至变的顺滑。\n"
        "7.	取一个容器，按顺序依次加入白糖、牛奶，隔水加热直至白糖融化，并加入泡软的吉利丁片，隔水加热直至吉利丁融化。\n"
        "8.	将混合好的混合液分少量多次加进奶酪中搅拌，直至混合均匀，并过塞，加进黑加仑酱调味。\n"
        "9.	从冰箱中取出模型，倒入芝士液，在放入冰箱冷冻一个小时以上至成型即可。\n"
    </string>
    <string name="cuixiangquqi">
        "脆香曲奇：\n\n"
        "黄油117g 牛奶30g 白砂糖45g 低粉146g 盐0.3g 杏仁粉30g.\n\n"
        "做法:\n"
        "1.	把糖和牛奶倒入小奶锅，用小火温热，用筷子搅拌至糖融化，关火晾凉。\n"
        "2.	黄油提前室温软化，待用时，切小块放入烤箱180度加热两分钟，使其稍微有点融化时取出\n"
        "3.	用电动打蛋器的头按压几下\n"
        "4.	然后再低速搅打至顺滑。\n"
        "5.	 分次倒入牛奶混合液。\n"
        "6.	电动打蛋器低速搅打均匀。\n"
        "7.	筛入低筋面粉，再加杏仁粉和盐，用刮刀翻拌至无面粉颗粒状态，刚开始时较干，耐心翻拌一会儿。\n"
        "8.	面糊装入裱花袋，我用的硅胶的裱花袋，结实，不渗油。\n"
        "9.	挤花形,加了点蔓越莓碎丁,烤箱预热，160度烤15分钟（每家烤箱温差不同，温度和烘烤时长仅供参考），烤的时候盯着点，如果发现边缘已经上色，表面呈金黄色，不管时间到了没，都要拿出来哦，以免烤糊！。\n"
    </string>
    <string name="heisenlin">
        "黑森林：\n\n"
        "低筋面粉75g 牛奶68g 糖88g 鸡蛋5个 玉米油50g 可可粉20g 装饰用车厘子罐头适量 鲜奶油300ml左右 巧克力150g.\n\n"
        "做法:\n"
        "1.	把蛋黄打散，加入玉米油，牛奶搅均匀之后筛入低粉和可可粉，之字型搅拌。\n"
        "2.	高速打发蛋清，可以滴几滴柠檬汁或白醋，没有也可以不放。出大泡的时候放三分之一的糖，高速发白有纹路放三分之一的糖，高速至变细腻再放入剩余的糖。\n"
        "3.	把三分之一的蛋白放到搅拌好的面粉糊里，像炒菜一样翻拌。这时候可以预热烤箱，150℃预热10分钟\n"
        "4.	之后把搅拌好的面粉糊再倒回到剩余的蛋白中，翻拌，不要过度，会消泡。\n"
        "5.	倒入模具，8寸的，在高处落下除去大的气泡，放入烤箱。150℃烤35-40分钟，用手摁下立即鼓起来就好了，也可以用牙签，蛋糕糊不粘在牙签上就可以了。\n"
        "6.	烤好立即拿出来倒放，冷却脱模，蛋糕胚就做好了。\n"
        "7.	巧克力隔水融化，放冰箱冷冻重新成型。\n"
        "8.	取一些黑樱桃切成小丁，准备夹心，拿出几个擦干水份装饰用。\n"
        "9.	蛋糕胚分成三层，用最平的底做最上面那一层。在蛋糕胚上刷樱桃汁，抹上奶油，撒上樱桃粒。\n"
    </string>
    <string name="niujiao">
        "牛角：\n\n"
        "牛奶120g 鸡蛋1个 玉米油30g 白糖30g 普道面粉200 酵母5g.\n\n"
        "做法:\n"
        "1.	把以上所有食材按顺序放进九阳面点机内，选和面发酵功能键，和30分钟，面团发酵到2倍大即可。\n"
        "2.	取出，把汽泡揉出去，分成二等份。\n"
        "3.	抹匀，叠成3叠,擀成薄片，滴上少许玉米油,再叠成3叠\n"
        "4.	擀成薄片，切成三角形状，从最宽的一头断开。\n"
        "5.	从宽处往下卷，喜欢吃奶油的，戓别的馅料可以随意加，卷起。\n"
        "6.	再2次发酵，1倍大。\n"
        "7.	放进烤箱，170度，20分钟。(根据自家烤箱，温度时间自己设定)。\n"
        "8.	美美的，软软的牛角小面包，不要太贪吃哦。\n"
    </string>
    <string name="qiaokeli">
        "巧克力：\n\n"
        "黑巧克力180g	 白朗姆酒20ml 黄油18g 白糖7g 纯净水12ml.\n\n"
        "做法:\n"
        "1.	把巧克力和黄油切小块，隔水融化（水温60度最好），搅拌均匀。\n"
        "2.	把白糖和水混合，搅拌至糖融化。再把朗姆酒倒入。等凉了再用。\n"
        "3.	准备一个厚度适中的模具，我用的是3厘米厚的。取巧克力溶液倒入模具中，用小勺往模具底部轻轻的挤压，这样四周也就涂抹上了一层巧克力液\n"
        "4.	等十分钟，巧克力凝固后倒入酒心，不要太满，还要封顶哦。放进冷冻室。\n"
        "5.	等到酒心冻硬了，再把巧克力液倒入正好填满整个模具。等十分钟就会凝固了。\n"
    </string>
    <string name="qiaokelidangao">
        "巧克力蛋糕：\n\n"
        "黄油55克 低筋面粉160克 buttermilk125毫升 可可粉20克鸡蛋1个 糖粉90克盐1/2茶匙 白醋1茶匙小苏打适量.\n\n"
        "做法:\n"
        "1.	 黄油室温软化后加糖粉搅打顺滑，分次加入蛋液充分搅拌，再依次加入可可粉、白醋、盐、小苏打，搅打均匀后分次加入buttermilk，最后筛入低筋面粉用刮刀拌匀，蛋糕的部分就完成了。\n"
        "2.	将面糊装入裱花袋挤进模具中，因为我想要高一点的效果，所以模具挤的比较满，这样拷出来的效果就会撑高许多。\n"
        "3.	接着盖上另一片棒棒糖模具；\n"
        "4.	擀成薄片，切成三角形状，从最宽的一头断开。\n"
        "5.	接着烤箱预热至180度，把模具放进烤箱中层，用上下火烤25分钟。\n"
        "6.	烤好后取出静置，待冷却后，用锯齿刀修掉中间边缘多出的部分。\n"
        "7.	接着将白巧克力隔水融化备用,接着将黑巧克力隔水融化备用,小蛋糕一端切掉一点，这样可以放平，然后抓住那一端在融化的巧克力里转一圈粘匀巧克力。\n"
        "8.	为了看着更有趣，可以根据装糖片的不同多做些样子。最后做好后放入小纸膜，放冰箱冷藏至巧克力凝固即可。\n"
    </string>
    <string name="tiantianquan">
        "甜甜圈：\n\n"
        "高筋面粉180克 水95克 干酵母1小勺 黄油18克 细砂糖25克 鸡蛋25克 盐3克 奶粉6克 炸油250克（实耗约30克）糖粉（沾表面）适量.\n\n"
        "做法:\n"
        "1.	黄油软化以后，加入细砂糖、盐，用打蛋器搅打均匀，成为略微膨松的状态。加入奶粉，搅拌均匀，再分数次加入鸡蛋，搅拌均匀。\n"
        "2.	搅拌好的黄油糊。干酵母溶解在适量水里(配方分量内)。把面粉倒入黄油糊里，再倒入酵母水及剩余的水。\n"
        "3.	揉成面团。把面团放在案板上用力揉片刻，或者借助搅面机，一直将面团揉到可以抻出薄膜的扩展阶段。然后将面团放在室温下发酵(面团上面盖一层保鲜膜或者湿布)。等待面团发酵到原来的2.5倍大时，面团就发酵完成了。一般情况下发酵时间约为1小时。室温越高，发酵速度也会越快，所需时间也就越短。\n"
        "4.	发酵好的面团，用手把里面的气体压出来，然后将面团放在室温下醒发15分钟。醒发好的面团，用擀面杖擀成厚度为1.1CM的面片。擀好以后，再醒发五到十分钟。\n"
        "5.	用甜甜圈模具将面皮切割成甜甜圈的形状。切好的甜甜圈面团放在铺了面粉的烤盘上。切割完以后多余的面皮，可以重新捏成团，松弛15分钟之后，再次擀开并切割。切割好的甜甜圈面团需要进行第二次发酵。甜甜圈面团的第二次发酵不要用太高的温度，如果是夏天，在甜甜圈面团上盖上保鲜膜或湿布，室温下直接发酵即可，发酵40分钟到1个小时，直到面团变得原来的2倍大（如果是冬天，把甜甜圈面团放到烤箱里，同时放入一盘温水，使烤箱内保持一定的温度，让面团充分发酵）。\n"
        "6.	油锅烧热，把发酵好的甜甜圈面团放到油锅里，炸至两面金黄即可。当一面炸好以后，要及时翻面。炸好的甜甜圈，沥干油以后，放在冷却架上冷却。甜甜圈完全冷却以后，在表面沾上糖粉作为装饰，就可以吃了。\n"
    </string>
    <string name="mafendangao">
        "马芬杯：\n\n"
        "抹茶粉10g 面粉200g 白砂糖120g 奶粉50g 清水130g 鸡蛋100g左右(两个) 植物油80g 泡打粉8g.\n\n"
        "做法:\n"
        "1.	将材料中的泡打粉，面粉和泡打粉过筛混合分装。4g泡打粉＋100g面粉（原味马芬）4g泡打粉＋90g面粉＋10-15g抹茶粉（抹茶马芬）。\n"
        "2.	以下材料两份分装：65g温水，60g白砂糖，40g植物油混合。拌匀，糖融化后。分别倒加入50g左右的鸡蛋（一个），25g的奶粉拌匀\n"
        "3.	确定完全混合后，分别塞入步骤一的粉类；\n"
        "4.	搅拌器划十字快速拌匀。此时烤箱预热，180℃；准备调羹、小号纸杯\n"
        "5.	表面洒上想要的装饰：如瓜子仁、椰蓉、肉松、巧克力豆和蔓越莓等。\n"
        "6.	入烤箱，30-35分钟。\n"
        "7.	出炉，用筷牙签插入不会有粘糊糊的就说明熟透啦。\n"
    </string>
    <string name="title_activity_simple_togather">SimpleTogatherActivity</string>
    <string name="already_registered">已有账号？登陆</string>
    <string name="action_register">创建账号</string>
    <string name="phone">手机号码</string>
    <string name="action_sign_in">登陆</string>
    <string name="different_login">or</string>
    <string name="forgot_password">忘记密码</string>
    <string name="create_account">创建账号</string>
    <string name="remembered_password">想起密码了？</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="password">密码</string>
    <string name="reset_pwd">重置密码</string>
</resources>