<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left"
        android:padding="20dp"
        android:src="@mipmap/ic_login_cancle_normal" />

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txt_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/app_primary"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_logo"
            android:layout_centerHorizontal="true"
            android:text="@string/action_sign_in"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_600" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.devin.client.shellapp.utils.CleanEditText
            android:id="@+id/et_phone"
            style="@style/login_edit_style"
            android:hint="@string/phone"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#f8f8f8" />

        <com.devin.client.shellapp.utils.CleanEditText
            android:id="@+id/et_password"
            style="@style/login_edit_style"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn"
            android:text="@string/action_sign_in"
            android:textColor="@color/grey_0"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/seprate"
            android:text="@string/create_account"
            android:textColor="#5c5c5c"
            android:textSize="15sp" />

        <View
            android:id="@+id/seprate"
            android:layout_width="0.5dp"
            android:layout_height="15dp"
            android:background="#5c5c5c" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/seprate"
            android:text="@string/forgot_password"
            android:textColor="#5c5c5c"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>

